--- a/SecureNotesWpfClient/NoteHistoryControl.xaml
+++ b/SecureNotesWpfClient/NoteHistoryControl.xaml
@@ -18,10 +18,14 @@
 
         <DockPanel Grid.Row="0" Grid.Column="0" LastChildFill="True">
             <Label Margin="0,0,5,0" FontWeight="Bold" VerticalAlignment="Center">Version History:</Label>
-            <ComboBox x:Name="versionComboBox">
-                <ComboBoxItem>Item 1</ComboBoxItem>
-                <ComboBoxItem>Item 2</ComboBoxItem>
-                <ComboBoxItem>Item 3</ComboBoxItem>
+            <ComboBox x:Name="versionComboBox" SelectionChanged="versionComboBox_SelectionChanged">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="{Binding Path=CreatedDT}" ContentStringFormat="M/d/yyyy"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
             </ComboBox>
         </DockPanel>
 
