--- a/SecureNotesWebClient/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/SecureNotesWebClient/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@inject SignInManager<AspNetCore.Identity.Dapper.ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
