--- a/SecureNotesWebAPI/Views/Shared/_Layout.cshtml
+++ b/SecureNotesWebAPI/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a href="/api/auth/login?UserName=bill@email.com&Password=test">Login</a></li>
                 </ul>
             </div>
         </div>
